--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite": "^4.0.19",
+    "typeorm": "^0.2.30"
   }
 }
